This file documents the revision history for the SNClient+ agent.

next:
         - create logfile folder unless it exists
         - update windows exporter to 0.25.1
            - i386 still uses 0.24 since thats the last supported version

0.16     Wed Jan 10 14:27:26 CET 2024
         - add check_ntp_offset
         - add check_mailq
         - add check_connections
         - improve check_process output
         - add check_process cpu metrics
         - improve check_service linux performance
         - add reload support for systemd service
         - add metrics to check_os_version
         - add metrics to check_snclient_version
         - use state from metric checks for final result
         - check_service: adjust default warn/crit condition if service argument is used (#72)
         - fix using arguments in aliased checks (#69)
         - fix metrics order when using check_nsc_web
         - fix wrong path in logrotation on linux
         - fix check_drivesize using percent thresholds

0.15     Fri Dec 15 23:31:08 CET 2023
         - improve counter memory consumption
         - change internal wmi library
         - fix check_temperature default thresholds
         - fix check_kernel_stats listing processes and threads
         - fix wmi based checks memory usage
         - fix check_eventlog memory usage

0.14     Tue Dec 12 19:57:45 CET 2023
         - check_service (linux): add rss/vms/cpu/task metric and remove generic mem metric
         - check_service: add more metrics
         - add cli inventory mode
         - add duration / age / date / human number macro post processors
         - add support for %{} macros and $() as well
         - add timeout to check_drivesize for hanging mounts
         - add check_cpu_utilization
         - add check_mount
         - add check_temperature
         - add check_kernel_stats
         - add fmt macro operator to formt numbers
         - add automatic retries to wmi querys